--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ hs_err_pid*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+*.iml
 # Generated files
 .idea/**/contentModel.xml
 
