--- a/Shoppingcart Frontend/pom.xml
+++ b/Shoppingcart Frontend/pom.xml
@@ -8,10 +8,27 @@
     <artifactId>shoppingcartfrontend</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>..</module>
-        <module>../ShoppingcartBackend</module>
-    </modules>
 
+
+    <properties>
+        <spring.version>5.1.6.RELEASE</spring.version>
+    </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
