adding a change from the feature branch

--- a/Shoppingcart Frontend/pom.xml
+++ b/Shoppingcart Frontend/pom.xml
@@ -23,10 +23,20 @@
             <scope>provided</scope>
         </dependency>
 
+
+<!--        spring mvc-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
+        </dependency>
+
+
+<!--        JSTL -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
         </dependency>
 
     </dependencies>
