--- a/Shoppingcart Frontend/pom.xml
+++ b/Shoppingcart Frontend/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>shoppingcartfrontend</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>../ShoppingCartBackend</module>
+    </modules>
 
 
     <properties>
@@ -15,6 +18,16 @@
     </properties>
 
     <dependencies>
+
+<!--        Link Backedn project-->
+
+        <dependency>
+            <groupId>com.sumang.shoppingcart.backend</groupId>
+            <artifactId>ShoppingCartBackend</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -38,6 +51,9 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+
+
+
 
     </dependencies>
 
