--- a/ShoppingcartBackend/pom.xml
+++ b/ShoppingcartBackend/pom.xml
@@ -2,16 +2,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>shoppingcartfrontend</artifactId>
-        <groupId>com.sumang.shoppingcart.frontend</groupId>
-        <version>1.0-SNAPSHOT</version>
-        <relativePath>../Shoppingcart Frontend/pom.xml</relativePath>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sumang.shoppingcart.backend</groupId>
-    <artifactId>shoppingcartbackend</artifactId>
+    <artifactId>ShoppingCartBackend</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <spring.version>5.1.6.RELEASE</spring.version>
+    </properties>
+
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+
+    </dependencies>
 
 
 </project>
